--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,6 +26,30 @@
 
 <!-- Add your site or application content here -->
 
+<div id = "top">
+  <h2>Chat server</h2><p>
+</div>
+<div id = "column1">
+  <h2>list of chat rooms</h2>
+  <div id = "list">
+
+  </div>
+  <button onclick="newRoom()">Create/ and Join New Room</button>
+</div>
+
+
+<div id = "column2">
+  <h1 id = "title">Currently in no room</h1>
+  <textarea title="Chat Log" id="log" readonly
+            style="display: block; width: 100%; height: 400px; resize: none; margin: 0; padding: 0; border: 0;"></textarea>
+  <input title="Chat Input" id="input" type="text" style="display: block; width: 100%; border-width: 1px 0 1px 0;"
+         autofocus/>
+
+</div>
+<div id = "bottom">
+  <h2>copyright © CSCI 2020U - Winter 2023</h2>
+</div>
+
 
 
 
